TripleO newton release
Change-Id: Ie134c51808ba14eb397180912b44947f758bbf21

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -71,5 +71,9 @@ releases:
       - hash: f48b9024cdd8c7e910e0732d72144b0b48bc5de1
         repo: openstack/instack-undercloud
     version: 5.3.6
+  - projects:
+      - hash: 6842a3cdc6c7ef625316696b538dd7d75ec088c0
+        repo: openstack/instack-undercloud
+    version: 5.3.7
 team: tripleo
 type: other
