--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -69,5 +69,9 @@ releases:
       - hash: 2576acbb897fd077e336a5bc472a6015ee04d328
         repo: openstack/puppet-tripleo
     version: 5.6.6
+  - projects:
+      - hash: 64a4d7c3a425f87fbade70d739afd2726fa4803f
+        repo: openstack/puppet-tripleo
+    version: 5.6.7
 team: tripleo
 type: other
