--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -79,5 +79,9 @@ releases:
       - hash: f62da2870adb71226fedb9c43ebc4176dccd5bd4
         repo: openstack/tripleo-heat-templates
     version: 5.3.8
+  - projects:
+      - hash: ef921db19ad64791bbf234ba4979ff705ef57b10
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.9
 team: tripleo
 type: other
