TripleO ocata release
Change-Id: I49cbe7ba668aa83feff25fa688409b2efdd1693e

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -40,5 +40,9 @@ releases:
       - hash: e89ee9c41c1f0a768545cbc09d77f8318e003753
         repo: openstack/instack-undercloud
     version: 6.1.3
+  - projects:
+      - hash: 7e65c96eceb2794c4d4f7fb5fbafe6188408f3a4
+        repo: openstack/instack-undercloud
+    version: 6.1.4
 team: tripleo
 type: other
