--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -68,5 +68,9 @@ releases:
       - hash: 4c002bd1d6d8c2118cb27b3246e08a80a8a8107f
         repo: openstack/tripleo-heat-templates
     version: 6.2.8
+  - projects:
+      - hash: 2fe5baac2c90e44ae626c3dc2440770ddc5fcac9
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.9
 team: tripleo
 type: other
