--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -58,5 +58,9 @@ releases:
       - hash: 1285b770db0483580d98d28d7ae5b6dbbc7d2f10
         repo: openstack/puppet-tripleo
     version: 6.5.7
+  - projects:
+      - hash: f9929aec65e545967a62161d76f2ed1db75f1941
+        repo: openstack/puppet-tripleo
+    version: 6.5.8
 team: tripleo
 type: other
