TripleO pike release
Change-Id: Ic7da8f86fc4154696c9bf84e0adbc60d9447d22f

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -58,5 +58,9 @@ releases:
       - hash: 5004fa5c77ceecc8c43ca9af827ec4786fbad394
         repo: openstack/instack-undercloud
     version: 7.4.7
+  - projects:
+      - hash: 6b6b4b39917aa9b3e5de8008c5e15ea37de8ca48
+        repo: openstack/instack-undercloud
+    version: 7.4.8
 team: tripleo
 type: other
