--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -53,5 +53,9 @@ releases:
       - hash: 6f18d036d2ff6c5831b5e114a252a5f4c67702ea
         repo: openstack/puppet-tripleo
     version: 7.4.7
+  - projects:
+      - hash: ca118d9f93a269c2ba7667e8d62696d283086bb3
+        repo: openstack/puppet-tripleo
+    version: 7.4.8
 team: tripleo
 type: other
