--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -46,6 +46,10 @@ releases:
       - hash: d50b19dc9fa4fe2e5a47ac97097e8a6d367ffaef
         repo: openstack/python-tripleoclient
     version: 7.3.6
+  - projects:
+      - hash: d582755c28d5a6aaa51225b2bc701d6e49f43277
+        repo: openstack/python-tripleoclient
+    version: 7.3.7
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
