--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -66,5 +66,9 @@ releases:
       - hash: 9c1acc2c9b739c6a14804221eda39a7f0002448f
         repo: openstack/tripleo-common
     version: 7.6.7
+  - projects:
+      - hash: 5a812cd888c5f8259f3b7e123ff17a71b68ab860
+        repo: openstack/tripleo-common
+    version: 7.6.8
 team: tripleo
 type: other
