--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -59,5 +59,9 @@ releases:
       - hash: 49a134bfd3ed7301e71da2d9a50b34eb09cf2c84
         repo: openstack/tripleo-heat-templates
     version: 7.0.7
+  - projects:
+      - hash: 0d85aa178874a27e6e514eb713581a5ebb998859
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.8
 team: tripleo
 type: other
