--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: ac65f7f8470718a99ad788cd8473e9cc63a88b32
         repo: openstack/tripleo-puppet-elements
     version: 7.0.3
+  - projects:
+      - hash: a2422e5832baf0c86ff1e1b27d23418f8c87b57b
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.4
 team: tripleo
 type: other
