--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: 6949c444388f8f92b149f0c3ae61b8086d794d1b
         repo: openstack/tripleo-validations
     version: 7.4.5
+  - projects:
+      - hash: e246d696db9ef72ddee50be8c4e28904b3bc7cec
+        repo: openstack/tripleo-validations
+    version: 7.4.6
 team: tripleo
 type: other
