--- a/deliverables/queens/watcher.yaml
+++ b/deliverables/queens/watcher.yaml
@@ -14,3 +14,8 @@ releases:
       - repo: openstack/watcher
         hash: c2e16bfa9630b374ccca8ea88493a166dfa5f1a9
         tarball-base: python-watcher
+  - version: 1.7.0
+    projects:
+      - repo: openstack/watcher
+        hash: 072822d9209523b051bd766340e76a9df5d8b9d3
+        tarball-base: python-watcher
