--- a/deliverables/queens/watcher-dashboard.yaml
+++ b/deliverables/queens/watcher-dashboard.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/watcher-dashboard
         hash: e44c43b6175ca0eaaad8115d0efd96fce09afac6
+  - version: 1.7.0
+    projects:
+      - repo: openstack/watcher-dashboard
+        hash: 1aae6fe0aa44363606cbfb23d35df9ee5da14615
