--- a/deliverables/queens/designate.yaml
+++ b/deliverables/queens/designate.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/designate
         hash: 3e0dbc7892e309f9df5846cb977e90a6fc2e2b8d
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/designate
+        hash: 09a46c0c138dbb8e0017ce9573bf3815340f6ad0
