Add release notes link for python-openstacksdk
We're publishing these now, so we should link to them.

Change-Id: Ib4963f80efd376c5debdf3ef24be40bc70f6a304

--- a/deliverables/queens/python-openstacksdk.yaml
+++ b/deliverables/queens/python-openstacksdk.yaml
@@ -1,6 +1,7 @@
 ---
 include-pypi-link: yes
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-openstacksdk
 launchpad: python-openstacksdk
 team: OpenStackSDK
 type: library
