Update releasenotes links for shade and os-client-config
Both have releasenotes published that we should link to. Also,
os-client-config's team is now OpenStackSDK.

Change-Id: I95f491a9991cf8b50d9a7a11a00e2e378bfa24f5

--- a/deliverables/queens/os-client-config.yaml
+++ b/deliverables/queens/os-client-config.yaml
@@ -2,5 +2,6 @@
 include-pypi-link: yes
 launchpad: os-client-config
 release-model: cycle-with-intermediary
-team: OpenStackClient
+release-notes: https://docs.openstack.org/releasenotes/os-client-config
+team: OpenStackSDK
 type: library
