--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -1,6 +1,7 @@
 ---
 include-pypi-link: yes
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/shade
 storyboard: 760
 team: OpenStackSDK
 type: library
