--- a/deliverables/queens/vitrage-dashboard.yaml
+++ b/deliverables/queens/vitrage-dashboard.yaml
@@ -3,3 +3,10 @@ launchpad: vitrage-dashboard
 release-model: cycle-with-intermediary
 team: vitrage
 type: horizon-plugin
+releases:
+  - version: 1.4.0
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 546014e7e4dda133e4277f2d6f2de716237e3a2a
+    highlights: |
+      - Added an alarm count banner in Horizon
