congress-dashboard queens-3 release
Change-Id: Idd4878e3344ad197ebe8a6fbc50ef759e9104598

--- a/deliverables/queens/congress-dashboard.yaml
+++ b/deliverables/queens/congress-dashboard.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: f580326ff5f7d593d33ca4b7fe1e80444dfa98af
+  - version: 2.0.0.0b3
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 1e12c93aec41b2eb771471118db55c48dcc96f23
