--- a/deliverables/queens/neutron-lbaas-dashboard.yaml
+++ b/deliverables/queens/neutron-lbaas-dashboard.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas-dashboard
         hash: ef650294bcc7447d441e6a710c39d64e384e1b27
+  - projects:
+      - hash: 6777fdc3a290fc159d4ff93b556f506ed8cb32ee
+        repo: openstack/neutron-lbaas-dashboard
+    version: 4.0.0.0b3
