--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/octavia-dashboard
         hash: baae43b65dc368edaafb1579c7fefbb93d40db8f
+  - projects:
+      - hash: 6407785f3c01586cceda760934cd088873253b86
+        repo: openstack/octavia-dashboard
+    version: 1.0.0.0b3
