--- a/deliverables/queens/neutron-lbaas.yaml
+++ b/deliverables/queens/neutron-lbaas.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: 0c76484a5055f2c7f7414156e15debd32b91822a
+  - projects:
+      - hash: d024d4262f3474ea211bc572776ea812b5643420
+        repo: openstack/neutron-lbaas
+    version: 12.0.0.0b3
