--- a/deliverables/queens/python-congressclient.yaml
+++ b/deliverables/queens/python-congressclient.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/python-congressclient
         hash: a8ec6c85255b94e997ce42fe60afed51e0517882
+branches:
+  - name: stable/queens
+    location: 1.9.0
