add client-library deliverable type
Change-Id: I71cc5f979b20ac9218520c75d85237ea81867581
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/python-barbicanclient.yaml
+++ b/deliverables/queens/python-barbicanclient.yaml
@@ -2,7 +2,7 @@
 launchpad: python-barbicanclient
 release-model: cycle-with-intermediary
 team: barbican
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 262025bd2ea60aa668d0981b50e2d62071ed8d60
