--- a/deliverables/queens/python-blazarclient.yaml
+++ b/deliverables/queens/python-blazarclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: blazar
 release-model: cycle-with-intermediary
 team: blazar
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 037f74de1f48b90dc25c5812b16543a6fccedfc1
