--- a/deliverables/queens/python-brick-cinderclient-ext.yaml
+++ b/deliverables/queens/python-brick-cinderclient-ext.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-cinderclient
 release-model: cycle-with-intermediary
 team: cinder
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 17e94f506b18ff1354ce8938467e31f6ae867c35
