--- a/deliverables/queens/python-cloudkittyclient.yaml
+++ b/deliverables/queens/python-cloudkittyclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: cloudkitty
 release-model: cycle-with-intermediary
 team: cloudkitty
-type: library
+type: client-library
 releases:
   - version: 1.2.0
     projects:
