--- a/deliverables/queens/python-congressclient.yaml
+++ b/deliverables/queens/python-congressclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-congressclient
 release-model: cycle-with-intermediary
 team: congress
-type: library
+type: client-library
 releases:
   - version: 1.9.0
     projects:
