--- a/deliverables/queens/python-designateclient.yaml
+++ b/deliverables/queens/python-designateclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-designateclient
 release-model: cycle-with-intermediary
 team: designate
-type: library
+type: client-library
 releases:
   - version: 2.8.0
     projects:
