--- a/deliverables/queens/python-freezerclient.yaml
+++ b/deliverables/queens/python-freezerclient.yaml
@@ -2,7 +2,7 @@
 launchpad: freezer
 release-model: cycle-with-intermediary
 team: freezer
-type: library
+type: client-library
 releases:
   - version: 1.5.0
     projects:
