--- a/deliverables/queens/python-heatclient.yaml
+++ b/deliverables/queens/python-heatclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-heatclient
 release-model: cycle-with-intermediary
 team: heat
-type: library
+type: client-library
 releases:
   - version: 1.12.0
     projects:
