--- a/deliverables/queens/python-ironicclient.yaml
+++ b/deliverables/queens/python-ironicclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-ironicclient
 release-model: cycle-with-intermediary
 team: ironic
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 9ab4193ea3a7cc11046f6e3e1b64a16211d00ef2
