--- a/deliverables/queens/python-karborclient.yaml
+++ b/deliverables/queens/python-karborclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-karborclient
 release-model: cycle-with-intermediary
 team: karbor
-type: library
+type: client-library
 releases:
   - projects:
       - hash: a4cec6cb18418a5e1d5508aa627f919f6a08ab11
