--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-manilaclient
 release-model: cycle-with-intermediary
 team: manila
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 63b5a4dedfde0a64c75fd4dad4a1da6a775effdf
