--- a/deliverables/queens/python-mistralclient.yaml
+++ b/deliverables/queens/python-mistralclient.yaml
@@ -1,6 +1,6 @@
 ---
 team: mistral
-type: library
+type: client-library
 include-pypi-link: yes
 launchpad: python-mistralclient
 release-model: cycle-with-intermediary
