--- a/deliverables/queens/python-monascaclient.yaml
+++ b/deliverables/queens/python-monascaclient.yaml
@@ -6,7 +6,7 @@ include-pypi-link: yes
 launchpad: monasca
 release-model: cycle-with-intermediary
 team: monasca
-type: library
+type: client-library
 releases:
   - projects:
       - hash: d81d2119fb90702d4ff497b29f5619ccf1d8ae04
