--- a/deliverables/queens/python-neutronclient.yaml
+++ b/deliverables/queens/python-neutronclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-neutronclient
 release-model: cycle-with-intermediary
 team: neutron
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 50b5b29b1acf5c60a6e4f9cf33ec482336a0e68b
