--- a/deliverables/queens/python-octaviaclient.yaml
+++ b/deliverables/queens/python-octaviaclient.yaml
@@ -4,7 +4,7 @@ storyboard: 911
 release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/python-octaviaclient/queens.html
 team: octavia
-type: library
+type: client-library
 branches:
   - name: stable/queens
     location: 1.4.0
