--- a/deliverables/queens/python-saharaclient.yaml
+++ b/deliverables/queens/python-saharaclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-saharaclient
 release-model: cycle-with-intermediary
 team: sahara
-type: library
+type: client-library
 releases:
   - version: 1.4.0
     projects:
