--- a/deliverables/queens/python-searchlightclient.yaml
+++ b/deliverables/queens/python-searchlightclient.yaml
@@ -3,4 +3,4 @@ include-pypi-link: yes
 launchpad: python-searchlightclient
 release-model: cycle-with-intermediary
 team: searchlight
-type: library
+type: client-library
