--- a/deliverables/queens/python-solumclient.yaml
+++ b/deliverables/queens/python-solumclient.yaml
@@ -2,7 +2,7 @@
 launchpad: python-solumclient
 release-model: cycle-with-intermediary
 team: solum
-type: library
+type: client-library
 releases:
   - version: 2.6.0
     projects:
