--- a/deliverables/queens/python-swiftclient.yaml
+++ b/deliverables/queens/python-swiftclient.yaml
@@ -4,7 +4,7 @@ launchpad: python-swiftclient
 release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/python-swiftclient/current.html
 team: swift
-type: library
+type: client-library
 releases:
   - version: 3.5.0
     projects:
