--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -3,7 +3,7 @@ launchpad: tripleo
 release-model: cycle-trailing
 release-type: python-pypi
 team: tripleo
-type: library
+type: client-library
 releases:
   - projects:
       - hash: d8e2ad26940e5fe83140e60f5ef8509775da3463
