--- a/deliverables/queens/python-vitrageclient.yaml
+++ b/deliverables/queens/python-vitrageclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-vitrageclient
 release-model: cycle-with-intermediary
 team: vitrage
-type: library
+type: client-library
 branches:
   - location: 2.0.0
     name: stable/queens
