--- a/deliverables/queens/python-watcherclient.yaml
+++ b/deliverables/queens/python-watcherclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: watcher
 release-model: cycle-with-intermediary
 team: watcher
-type: library
+type: client-library
 releases:
   - version: 1.4.0
     projects:
