--- a/deliverables/queens/python-zaqarclient.yaml
+++ b/deliverables/queens/python-zaqarclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-zaqarclient
 release-model: cycle-with-intermediary
 team: zaqar
-type: library
+type: client-library
 releases:
   - version: 1.8.0
     projects:
