--- a/deliverables/queens/python-zunclient.yaml
+++ b/deliverables/queens/python-zunclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-zunclient
 release-model: cycle-with-intermediary
 team: zun
-type: library
+type: client-library
 releases:
   - version: 0.5.0
     projects:
