--- a/deliverables/queens/python-aodhclient.yaml
+++ b/deliverables/queens/python-aodhclient.yaml
@@ -3,4 +3,4 @@ include-pypi-link: yes
 launchpad: python-aodhclient
 release-model: cycle-with-intermediary
 team: Telemetry
-type: library
+type: client-library
