--- a/deliverables/queens/python-cinderclient.yaml
+++ b/deliverables/queens/python-cinderclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-cinderclient
 release-model: cycle-with-intermediary
 team: cinder
-type: library
+type: client-library
 releases:
   - version: 3.2.0
     projects:
