--- a/deliverables/queens/python-ironic-inspector-client.yaml
+++ b/deliverables/queens/python-ironic-inspector-client.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-ironic-inspector-client
 release-model: cycle-with-intermediary
 team: ironic
-type: library
+type: client-library
 releases:
   - projects:
       - hash: e4ceea7a96f9b446fbe3b230ffce1d920a883324
