--- a/deliverables/queens/python-keystoneclient.yaml
+++ b/deliverables/queens/python-keystoneclient.yaml
@@ -6,7 +6,7 @@ include-pypi-link: yes
 launchpad: python-keystoneclient
 release-model: cycle-with-intermediary
 team: keystone
-type: library
+type: client-library
 releases:
   - projects:
       - hash: 2bea645ccc0723d69f10c771b73b5894223feedf
