--- a/deliverables/queens/python-magnumclient.yaml
+++ b/deliverables/queens/python-magnumclient.yaml
@@ -3,4 +3,4 @@ include-pypi-link: yes
 launchpad: python-magnumclient
 release-model: cycle-with-intermediary
 team: magnum
-type: library
+type: client-library
