--- a/deliverables/queens/python-muranoclient.yaml
+++ b/deliverables/queens/python-muranoclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-muranoclient
 release-model: cycle-with-intermediary
 team: murano
-type: library
+type: client-library
 releases:
   - version: 1.0.0
     projects:
