--- a/deliverables/queens/python-novaclient.yaml
+++ b/deliverables/queens/python-novaclient.yaml
@@ -7,7 +7,7 @@ launchpad: python-novaclient
 release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/python-novaclient/unreleased.html
 team: nova
-type: library
+type: client-library
 releases:
   - version: 10.0.0
     projects:
