--- a/deliverables/queens/python-senlinclient.yaml
+++ b/deliverables/queens/python-senlinclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-senlinclient
 release-model: cycle-with-intermediary
 team: senlin
-type: library
+type: client-library
 releases:
   - version: 1.5.0
     projects:
