--- a/deliverables/queens/python-tackerclient.yaml
+++ b/deliverables/queens/python-tackerclient.yaml
@@ -3,4 +3,4 @@ include-pypi-link: yes
 launchpad: python-tackerclient
 release-model: cycle-with-intermediary
 team: tacker
-type: library
+type: client-library
