--- a/deliverables/queens/python-troveclient.yaml
+++ b/deliverables/queens/python-troveclient.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: python-troveclient
 release-model: cycle-with-intermediary
 team: trove
-type: library
+type: client-library
 releases:
   - version: 2.13.0
     projects:
