congress queens-3 release
Change-Id: Ifc05c6e5a3d71fef44b80c2e9a799cf5f975c137

--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/congress
         hash: 4043745bd48736f9705a0e8b764a1bbe4186793e
+  - version: 7.0.0.0b3
+    projects:
+      - repo: openstack/congress
+        hash: d9f6b258f7b66b556aef5c919dae0679db2067cf
