Neutron Queens Milestone 3
Change-Id: Ifd77e3b1b6596b6da7188461e03171c587d77b5f

--- a/deliverables/queens/networking-bagpipe.yaml
+++ b/deliverables/queens/networking-bagpipe.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 8d2c1dc245f064dad911ad551256c343489e7679
         repo: openstack/networking-bagpipe
     version: 8.0.0.0b2
+  - projects:
+      - hash: c26d282af240a29c3fc9575b9f9a520137941531
+        repo: openstack/networking-bagpipe
+    version: 8.0.0.0b3
