--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: ea4f9d118d8c200a76aad14a6e376e944e3fe46a
         repo: openstack/networking-bgpvpn
     version: 8.0.0.0b2
+  - projects:
+      - hash: 40d2a0422f7b20aef98afa410f1c2ecc15a38a09
+        repo: openstack/networking-bgpvpn
+    version: 8.0.0.0b3
