--- a/deliverables/queens/networking-odl.yaml
+++ b/deliverables/queens/networking-odl.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: 4fd722139446f0cc2cbfb784da66aa146b32f169
         repo: openstack/networking-odl
     version: 12.0.0.0b2
+  - projects:
+      - hash: 0f6c9548c4fcff858e38d704a49f31568c50a744
+        repo: openstack/networking-odl
+    version: 12.0.0.0b3
