--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: 06536b65f8277fe3955f2a94809514f695bd6855
         repo: openstack/networking-sfc
     version: 6.0.0.0b2
+  - projects:
+      - hash: 931f5e435014b14e41614d067c1f115ff6be68aa
+        repo: openstack/networking-sfc
+    version: 6.0.0.0b3
