--- a/deliverables/queens/neutron-dynamic-routing.yaml
+++ b/deliverables/queens/neutron-dynamic-routing.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 8eb1ddfc24a584a30c83c07348cd98de70f05c46
         repo: openstack/neutron-dynamic-routing
     version: 12.0.0.0b2
+  - projects:
+      - hash: a9ac3cc080cee3d112e8267e272e6a785ffbc6e2
+        repo: openstack/neutron-dynamic-routing
+    version: 12.0.0.0b3
