--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: cef88d227d576018d805b084428a612ec458c004
         repo: openstack/neutron-fwaas
     version: 12.0.0.0b2
+  - projects:
+      - hash: e5f5c3f44531d2b6c9d813bc8f6d69e685af8c14
+        repo: openstack/neutron-fwaas
+    version: 12.0.0.0b3
