--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: a62a6002b3ee5334dd7608ba65a5cee23b524004
         repo: openstack/neutron
     version: 12.0.0.0b2
+  - projects:
+      - hash: 7e3d6a18fb928bcd303a44c1736d0d6ca9c7f0ab
+        repo: openstack/neutron
+    version: 12.0.0.0b3
