--- a/deliverables/queens/networking-midonet.yaml
+++ b/deliverables/queens/networking-midonet.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: b9a9c1334fe9cd3d65d822792583d88a6dc32121
         repo: openstack/networking-midonet
     version: 6.0.0.0b2
+  - projects:
+      - hash: abe70603a2776a3fd5e6f7addc262653fde61019
+        repo: openstack/networking-midonet
+    version: 6.0.0.0b3
