--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -14,3 +14,7 @@ releases:
       - hash: 746cae0aaa9e7a03c416a4e237afc1203a8ee96f
         repo: openstack/networking-ovn
     version: 4.0.0.0b2
+  - projects:
+      - hash: 1563875b018a4f3bd189e2a0bd31da64616f4d4e
+        repo: openstack/networking-ovn
+    version: 4.0.0.0b3
