--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 87567851772f4510855cf4116a6135dc159981ff
         repo: openstack/puppet-ceilometer
     version: 12.2.0
+  - projects:
+      - hash: 489db857ea212e63ea4c7dd2ce607254a6625e59
+        repo: openstack/puppet-ceilometer
+    version: 12.3.0
