--- a/deliverables/queens/puppet-cinder.yaml
+++ b/deliverables/queens/puppet-cinder.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: cc8389b453086badf64474ada200cf9088512b0c
         repo: openstack/puppet-cinder
     version: 12.1.0
+  - projects:
+      - hash: 277828c164cd6b6d5c22f4bae6b8adfecb2c0fba
+        repo: openstack/puppet-cinder
+    version: 12.2.0
