--- a/deliverables/queens/puppet-congress.yaml
+++ b/deliverables/queens/puppet-congress.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 460dadee73d8d0b5a8684d6468670e734d71cd38
         repo: openstack/puppet-congress
     version: 12.1.0
+  - projects:
+      - hash: 1aea3c824c656e9ab1c5480b6e07173f82db2405
+        repo: openstack/puppet-congress
+    version: 12.2.0
