--- a/deliverables/queens/puppet-designate.yaml
+++ b/deliverables/queens/puppet-designate.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 413599748de206e18c2951d9a0dacacb0dee669b
         repo: openstack/puppet-designate
     version: 12.1.0
+  - projects:
+      - hash: 0a523b565beb8ad97eabf9fb162abd4a9d612db4
+        repo: openstack/puppet-designate
+    version: 12.2.0
