--- a/deliverables/queens/puppet-ec2api.yaml
+++ b/deliverables/queens/puppet-ec2api.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 9bf77438df5a5fb15b0ef844873f5c0294a4c69c
         repo: openstack/puppet-ec2api
     version: 12.1.0
+  - projects:
+      - hash: e9ecb08def8691074fc8c9bbbc97c1fb4d8b56d3
+        repo: openstack/puppet-ec2api
+    version: 12.2.0
