--- a/deliverables/queens/puppet-glance.yaml
+++ b/deliverables/queens/puppet-glance.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 9d5c6a43ee1d8c8cd08fc2f21c7276e4a4172bef
         repo: openstack/puppet-glance
     version: 12.2.0
+  - projects:
+      - hash: 801dee599ff0e9c313df6e4dbfb19385e94590a0
+        repo: openstack/puppet-glance
+    version: 12.3.0
