--- a/deliverables/queens/puppet-heat.yaml
+++ b/deliverables/queens/puppet-heat.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e0843d6dd99de7e77f20e4893c25da77e344a092
         repo: openstack/puppet-heat
     version: 12.1.0
+  - projects:
+      - hash: 56cbd7c89bfc99f6a962319f478d75dbf35e8335
+        repo: openstack/puppet-heat
+    version: 12.2.0
