--- a/deliverables/queens/puppet-horizon.yaml
+++ b/deliverables/queens/puppet-horizon.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 01a1e93ef17a3b30e1d5dd086f7b858b50e79a64
         repo: openstack/puppet-horizon
     version: 12.1.0
+  - projects:
+      - hash: b30a264a2a59e7251a1ad4e27b111d38eca166c1
+        repo: openstack/puppet-horizon
+    version: 12.2.0
