--- a/deliverables/queens/puppet-ironic.yaml
+++ b/deliverables/queens/puppet-ironic.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e4fcf84bdfd4f1b675aa85e30e88a37eb11bf4aa
         repo: openstack/puppet-ironic
     version: 12.1.0
+  - projects:
+      - hash: dd2b63c6f6336a870dd39756ef3d9e0224f96b45
+        repo: openstack/puppet-ironic
+    version: 12.2.0
