--- a/deliverables/queens/puppet-keystone.yaml
+++ b/deliverables/queens/puppet-keystone.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: f2c86051e35370541a779069f3921e0c15927eb5
         repo: openstack/puppet-keystone
     version: 12.1.0
+  - projects:
+      - hash: 4cdfe9d0915647fdc37b483b4fa409176f58659f
+        repo: openstack/puppet-keystone
+    version: 12.2.0
