--- a/deliverables/queens/puppet-mistral.yaml
+++ b/deliverables/queens/puppet-mistral.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: fa73c46e7cd9a939f23e916cd69757a0c18d601c
         repo: openstack/puppet-mistral
     version: 12.1.0
+  - projects:
+      - hash: 99a4ed0a18d456b2d5d6c2518730b0a4f3068891
+        repo: openstack/puppet-mistral
+    version: 12.2.0
