--- a/deliverables/queens/puppet-octavia.yaml
+++ b/deliverables/queens/puppet-octavia.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: f6c2841c458ad8c88d6e3eba21c560c1688cf9d4
         repo: openstack/puppet-octavia
     version: 12.1.0
+  - projects:
+      - hash: a8a2fe98c30567ed72e3a66046b098d23d36341e
+        repo: openstack/puppet-octavia
+    version: 12.2.0
