--- a/deliverables/queens/puppet-openstack_extras.yaml
+++ b/deliverables/queens/puppet-openstack_extras.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: c8ca70469ea5fd3ada9e69e47bf4f7ffd77b91e4
         repo: openstack/puppet-openstack_extras
     version: 12.1.0
+  - projects:
+      - hash: b090b9792c8fd5ed8af9b8655da9fa6cdb5bab95
+        repo: openstack/puppet-openstack_extras
+    version: 12.2.0
