--- a/deliverables/queens/puppet-openstacklib.yaml
+++ b/deliverables/queens/puppet-openstacklib.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 5e009d5b885097a0b74fe131c88fab3ad00a9671
         repo: openstack/puppet-openstacklib
     version: 12.1.0
+  - projects:
+      - hash: 12107fdd80944e35fc8f3b28dc07446bc20c1788
+        repo: openstack/puppet-openstacklib
+    version: 12.2.0
