--- a/deliverables/queens/puppet-oslo.yaml
+++ b/deliverables/queens/puppet-oslo.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 8e94c4fc2e97d071330fbf385ae38e9be7067ca7
         repo: openstack/puppet-oslo
     version: 12.1.0
+  - projects:
+      - hash: b3eb74bc57a5f7f5d335998a15666b88b638913a
+        repo: openstack/puppet-oslo
+    version: 12.2.0
