--- a/deliverables/queens/puppet-ovn.yaml
+++ b/deliverables/queens/puppet-ovn.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 7bc471705ce63bf8e22d95259480a29097d4dfe9
         repo: openstack/puppet-ovn
     version: 12.1.0
+  - projects:
+      - hash: 2a9b3ad3bfa793bf3e0ba935d2a567bc4d6cfb1c
+        repo: openstack/puppet-ovn
+    version: 12.2.0
