--- a/deliverables/queens/puppet-panko.yaml
+++ b/deliverables/queens/puppet-panko.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e874b8889e482f4cc51f5ec22c29df70d6ba6480
         repo: openstack/puppet-panko
     version: 12.1.0
+  - projects:
+      - hash: af4cf377053297d68e7013919161598e096c0929
+        repo: openstack/puppet-panko
+    version: 12.2.0
