--- a/deliverables/queens/puppet-sahara.yaml
+++ b/deliverables/queens/puppet-sahara.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 2136d15f6e51365915af05668a8a6511d138ad6b
         repo: openstack/puppet-sahara
     version: 12.1.0
+  - projects:
+      - hash: 383240b3b22de6654e0b38c7ea87baa1597816e5
+        repo: openstack/puppet-sahara
+    version: 12.2.0
