--- a/deliverables/queens/puppet-swift.yaml
+++ b/deliverables/queens/puppet-swift.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 677622dc6da860a15666cbdc1f2847f145877b7c
         repo: openstack/puppet-swift
     version: 12.1.0
+  - projects:
+      - hash: de58ee918c88034d58f354e6512bed8257daa099
+        repo: openstack/puppet-swift
+    version: 12.2.0
