--- a/deliverables/queens/puppet-tacker.yaml
+++ b/deliverables/queens/puppet-tacker.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 01ceeb15263a1d1a2a318e09a3acee999a9e5fa3
         repo: openstack/puppet-tacker
     version: 12.1.0
+  - projects:
+      - hash: 944ace58ae19426fc455e2c1cbdcf68108ac656a
+        repo: openstack/puppet-tacker
+    version: 12.2.0
