--- a/deliverables/queens/puppet-tempest.yaml
+++ b/deliverables/queens/puppet-tempest.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: f65101fc22f6553a894df0a6f584264df8396b1a
         repo: openstack/puppet-tempest
     version: 12.1.0
+  - projects:
+      - hash: 1ff7029745984fd8f1b9256b65ab2eca937068d7
+        repo: openstack/puppet-tempest
+    version: 12.2.0
