--- a/deliverables/queens/puppet-trove.yaml
+++ b/deliverables/queens/puppet-trove.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 29efec8d1dab335347b849c92b568b91c2eab5e5
         repo: openstack/puppet-trove
     version: 12.1.0
+  - projects:
+      - hash: d5a6346274c9c14307178be2e0df46a34af89c4f
+        repo: openstack/puppet-trove
+    version: 12.2.0
