--- a/deliverables/queens/puppet-vitrage.yaml
+++ b/deliverables/queens/puppet-vitrage.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 3d1a86ee4f8d7f351044056868d3e125a3e9935a
         repo: openstack/puppet-vitrage
     version: 2.1.0
+  - projects:
+      - hash: 85b2177e7710913ad9b12ef2996032644991520f
+        repo: openstack/puppet-vitrage
+    version: 2.2.0
