--- a/deliverables/queens/puppet-vswitch.yaml
+++ b/deliverables/queens/puppet-vswitch.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: f3b7c9d2f0b4bf9dcf26e13ea2ef4fe32e348eb5
         repo: openstack/puppet-vswitch
     version: 8.1.0
+  - projects:
+      - hash: 2c74666058470d22565b0e52fba1d74001162ae1
+        repo: openstack/puppet-vswitch
+    version: 8.2.0
