--- a/deliverables/queens/puppet-watcher.yaml
+++ b/deliverables/queens/puppet-watcher.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: e1862cd3bb4ff3461bd61b9424f5caee033c258c
         repo: openstack/puppet-watcher
     version: 12.1.0
+  - projects:
+      - hash: c3bf76a3d92421a1339af1b78adcc68255dbcd7b
+        repo: openstack/puppet-watcher
+    version: 12.2.0
