--- a/deliverables/queens/puppet-zaqar.yaml
+++ b/deliverables/queens/puppet-zaqar.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 326f473a20edd056d4bffa597c2e8d649db2b827
         repo: openstack/puppet-zaqar
     version: 12.1.0
+  - projects:
+      - hash: 20dd37ee7902a329da0c00f9f32f93f64f86b69b
+        repo: openstack/puppet-zaqar
+    version: 12.2.0
