--- a/deliverables/queens/puppet-aodh.yaml
+++ b/deliverables/queens/puppet-aodh.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 411952f7fb3f7473c1bb171fa34af9813e38d18a
         repo: openstack/puppet-aodh
     version: 12.1.0
+  - projects:
+      - hash: 416d8442d53d4ec9adf6ec7512bd55321eae4dfa
+        repo: openstack/puppet-aodh
+    version: 12.2.0
