--- a/deliverables/queens/puppet-barbican.yaml
+++ b/deliverables/queens/puppet-barbican.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 582058497bb029e820c8069f51d54e5ad5921a1c
         repo: openstack/puppet-barbican
     version: 12.1.0
+  - projects:
+      - hash: eef142e7a99fffae8a6768144716e28ca56827e3
+        repo: openstack/puppet-barbican
+    version: 12.2.0
