--- a/deliverables/queens/puppet-gnocchi.yaml
+++ b/deliverables/queens/puppet-gnocchi.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: 274b8f39acb23c5aa8b49684f405d8ae385de111
         repo: openstack/puppet-gnocchi
     version: 12.1.0
+  - projects:
+      - hash: 8fb2b3417df113dfcb0cc469f0cf4579cdbe88d5
+        repo: openstack/puppet-gnocchi
+    version: 12.2.0
