--- a/deliverables/queens/puppet-manila.yaml
+++ b/deliverables/queens/puppet-manila.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 518085dc1acbbad8150b3e0d9f284821e3ab211d
         repo: openstack/puppet-manila
     version: 12.1.0
+  - projects:
+      - hash: 4d9b494a3b672458988d6ee1d9e7fb5ca5c8c0b3
+        repo: openstack/puppet-manila
+    version: 12.2.0
