--- a/deliverables/queens/puppet-murano.yaml
+++ b/deliverables/queens/puppet-murano.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: f8c461d2f3cc3be18e69715fd4a3c1be83c45f7b
         repo: openstack/puppet-murano
     version: 12.1.0
+  - projects:
+      - hash: fe3ac89624348e21b38ecc6ee23a8b0ed9a74c24
+        repo: openstack/puppet-murano
+    version: 12.2.0
