--- a/deliverables/queens/puppet-neutron.yaml
+++ b/deliverables/queens/puppet-neutron.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 87bc06b224705e527d695830d7bf9f0cf98182cb
         repo: openstack/puppet-neutron
     version: 12.1.0
+  - projects:
+      - hash: 7428f6848ab6390a53a25f29d2512db8137bae1f
+        repo: openstack/puppet-neutron
+    version: 12.2.0
