--- a/deliverables/queens/puppet-nova.yaml
+++ b/deliverables/queens/puppet-nova.yaml
@@ -12,3 +12,7 @@ releases:
       - hash: 9606525df2e38224a6d88f6d014284d5496547d6
         repo: openstack/puppet-nova
     version: 12.1.0
+  - projects:
+      - hash: 7a1931cd63eeabf53b2472f47681e33dc29980bf
+        repo: openstack/puppet-nova
+    version: 12.2.0
