--- a/deliverables/queens/horizon.yaml
+++ b/deliverables/queens/horizon.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: ffd011441df3317404e48c4c435f448565abd513
+  - version: 13.0.0.0b3
+    projects:
+      - repo: openstack/horizon
+        hash: f1eba8073d9c25f7453911f0c7141959b2e0848c
