--- a/deliverables/queens/freezer.yaml
+++ b/deliverables/queens/freezer.yaml
@@ -12,3 +12,11 @@ releases:
         hash: aa4164ab79e02de02c6d1c1fe34311515956c4b2
       - repo: openstack/freezer-dr
         hash: 1bcc0b44b8a4b9fd5472cb058e3d572339ab87ce
+  - version: 6.0.0.0b3
+    projects:
+      - repo: openstack/freezer
+        hash: 9a4d874ed461805269e5edd80a22e5e22570c977
+      - repo: openstack/freezer-api
+        hash: 6942ff6d5706fe27a644d21a15b27b9990c54a5e
+      - repo: openstack/freezer-dr
+        hash: 1bcc0b44b8a4b9fd5472cb058e3d572339ab87ce
