Relase Senlin Q3 milestone
Change-Id: I2ce6eb55643190856a305c13f375abb924e510ff

--- a/deliverables/queens/senlin.yaml
+++ b/deliverables/queens/senlin.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: cca084d903508e096fa301820e6a9d077f6df76e
         repo: openstack/senlin
     version: 5.0.0.0b2
+  - projects:
+      - hash: 6e7de8a60d74de354452bc4071027eccab6e0d86
+        repo: openstack/senlin
+    version: 5.0.0.0b3
