--- a/deliverables/queens/python-senlinclient.yaml
+++ b/deliverables/queens/python-senlinclient.yaml
@@ -9,3 +9,7 @@ releases:
     projects:
       - repo: openstack/python-senlinclient
         hash: 703f41ad5bb4d201401f2455e3370b3b568f7c75
+  - version: 1.6.0
+    projects:
+      - repo: openstack/python-senlinclient
+        hash: 96a4e0fb0ff15bf74d15a92eaa04c83842f520f3
