--- a/deliverables/queens/python-freezerclient.yaml
+++ b/deliverables/queens/python-freezerclient.yaml
@@ -7,4 +7,8 @@ releases:
   - version: 1.5.0
     projects:
       - repo: openstack/python-freezerclient
-        hash: 0b1e11a316640cfa2c2bb297a6b9e11acbc70d96
+        hash: 1974aeadae1da9cff5420c7dba032045a75a9696
+  - version: 1.6.0
+    projects:
+      - repo: openstack/python-freezerclient
+        hash: b92f04af68b1ed96bb96256f820c99d3824b3eab
